# memx

./: .gitignore  LICENSE  README.md  cli.py  config.toml  prompt.md  pyproject.toml  server.py
memex/: config.py  db.py  embeddings.py  search.py
memx/: cli.py  config.py  extraction.py  search.py  server.py
