[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memex"
version = "0.1.0"
description = "Local memory layer for AI tools via MCP"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "mcp>=1.0.0",
    "sqlite-vec>=0.1.6",
    "httpx>=0.27.0",
    "pyperclip>=1.8.2",
]

[project.scripts]
memex = "cli:app"
memex-server = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["memex"]
